[package]
name = "dateir"
version = "0.1.0"
authors = ["robatipoor <mahdi.robatipoor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
lazy_static = "1.4.0"
regex = "1.3.9"